--- a/styles.css
+++ b/styles.css
@@ -460,7 +460,7 @@ header {
     display: grid;
     border: 3px solid black;
     text-align: center;
-    grid-template-columns: 50% 50%;
+    grid-template-columns: 100%;
     grid-template-rows: 200px 50px 50px 50px 50px;
     background-color: white;
     width: 600px;
@@ -479,27 +479,22 @@ header {
 
 }
 
-.nested-grid-registro-img {
-    grid-column: 1/3;
 
-}
 .nested-grid-registro-img i{
 padding-top: 10px;
 
 }
 .nested-grid-registro-button {
 
-    grid-column: 1/3;
     padding-bottom: 50px;
 }
 .nested-grid-registro-button a{
     text-align: center;
 }
 .nested-grid-registro-button button {
-    padding-top: 10px;
-    grid-column: 1/3;
+    margin-top: 10px;
     width: 200px;
-    padding-bottom: 10px;
+    height: 40px;
     background-color: black;
     color: white;
     text-align: center;
