Commit 3 - Se agregó imagen Anime y edición Anime.html

--- a/styles.css
+++ b/styles.css
@@ -521,7 +521,7 @@ header {
     text-align: center;
     border-radius: 20px 20px 0 0 ;
     font-size: 100px;
-    background-color: rgb(206, 100, 13);
+    background-color: rgba(243, 19, 150, 0.623);
     color:white;
     padding-bottom: 80px;
     padding-top:30px;
