--- a/styles.css
+++ b/styles.css
@@ -537,9 +537,8 @@ header {
         margin: auto;
     }
 
- 
     .jumbotron .jumbotron-column .jumbotron-column-title{
-        font-size: 40px;
+        font-size: 40px!important;
         text-align: center;
     }
     .additionals{
@@ -552,10 +551,10 @@ header {
     }
 
     #section-videojuegos h1{
-        font-size: 10px;
+        font-size: 30px!important;
     }
     #section-videojuegos h1 i{
-        font-size: 10px;
+        font-size: 30px!important;
     }
  
 } 
@@ -566,8 +565,8 @@ header {
     }
 
     .jumbotron .jumbotron-img{
-        width: 480px !important;
-        height: 480px !important;
+        width: 480px;
+        height: 480px;
     }
     .jumbotron .jumbotron-column .jumbotron-column-title{
         font-size: 40px;
@@ -583,10 +582,10 @@ header {
     }
 
     #section-videojuegos h1{
-        font-size: 40px!important;
+        font-size: 40px;
     }
     #section-videojuegos h1 i{
-        font-size: 40px!important;
+        font-size: 40px;
     }
  
 } 
@@ -629,8 +628,8 @@ header {
         margin: auto;
     }
     .jumbotron .jumbotron-img{
-        width: 670px !important;
-        height: 670px!important;
+        width: 670px ;
+        height: 670px;
     }
     .jumbotron-column-title{
         font-size: 70px;
@@ -649,10 +648,10 @@ header {
         margin: auto;
     }
     #section-videojuegos h1{
-        font-size: 60px!important;
+        font-size: 60px;
     }
     #section-videojuegos h1 i{
-        font-size: 60px!important;
+        font-size: 60px;
     }
  
 }
