--- a/styles.css
+++ b/styles.css
@@ -536,9 +536,12 @@ header {
         flex-direction: column;
         margin: auto;
     }
-
+    .jumbotron .jumbotron-img{
+        width: 320px!important;
+        height: 320px!important;
+    }
     .jumbotron .jumbotron-column .jumbotron-column-title{
-        font-size: 40px!important;
+        font-size: 30px!important;
         text-align: center;
     }
     .additionals{
